--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                             <li class="nav-item">
                                 <a href="index.html">Home</a>
                             </li>
-                            <li class="nav-item dropdown active">
+                            <li class="nav-item dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false" href="#">Pages <i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
                                     <li>
@@ -55,7 +55,7 @@
                                 </ul>                                 
                             </li>
                             <!-- /.dropdown -->                             
-                            <li class="nav-item">
+                            <li class="nav-item active">
                                 <a href="contact.html">Contact</a>
                             </li>
                         </ul>
