--- a/blackmagic.html
+++ b/blackmagic.html
@@ -179,7 +179,7 @@ a combination of truth and fiction.</p>
                     <p><a href="tandc.html">Terms &amp; Conditions</a>&nbsp;-&nbsp;<a href="pp.html">Privacy Policy</a></p>
                     <p>
     We don't use any cookies except essential ones, and don't monitor traffic.</p>
-                    <p>Copyright © Pixel Peepz<script> document.write(new Date().getFullYear());</script></p> 
+                    <p>Copyright © Paint Punkz NFT <script> document.write(new Date().getFullYear());</script></p> 
                 </div>
             </div>
             <!-- /.container -->
