--- a/blackmagic.html
+++ b/blackmagic.html
@@ -48,10 +48,10 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a href="index.html">Home</a>
                             </li>
-                            <li class="nav-item dropdown">
+                            <li class="nav-item dropdown active">
                                 <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false" href="#">Pages <i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
                                     <li>
@@ -179,7 +179,7 @@ a combination of truth and fiction.</p>
                     <p><a href="tandc.html">Terms &amp; Conditions</a>&nbsp;-&nbsp;<a href="pp.html">Privacy Policy</a></p>
                     <p>
     We don't use any cookies except essential ones, and don't monitor traffic.</p>
-                    <p>Copyright © Paint Punkz NFT <script> document.write(new Date().getFullYear());</script></p> 
+                    <p>Copyright © Pixel Peepz <script> document.write(new Date().getFullYear());</script></p> 
                 </div>
             </div>
             <!-- /.container -->
@@ -193,5 +193,6 @@ a combination of truth and fiction.</p>
         <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
         <script type="text/javascript" src="js/bskit-scripts.js"></script>         
         <script type="text/javascript" src="js/bskit-scripts.js"></script>
+        <script type="text/javascript" src="js/scroll.js"></script>         
     </body>     
 </html>
