--- a/creatorpunk.html
+++ b/creatorpunk.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-4 col-xs-push-4 text-center">
+                <div class="col-xs-push-4 text-center">
                     <a href="https://opensea.io/PaintPunkz" class="btn btn-outline btn-outline-xl outline-light">Opensea profile</a> 
                 </div>
             </div>
@@ -294,7 +294,7 @@ Many autistic people also have difficulty with reading emotions and recognizing 
                         <h3>About Synesthesia</h3>
                         <p>Synesthetes experience a phenomenon called synesthesia where one sense is experienced as another. For example, seeing colors when hearing music or tasting colors when reading words.</p>
                         <p>Synesthesia is a neurological condition that causes people's brains to cross wires, or in some cases to change and evolve over time. Some forms of synesthesia are more common than others. The most well-known form of synesthesia is grapheme-color synesthesia where certain letters or numbers might have an associated color. </p>
-                        <p>Other forms of synesthesia include things such as tasting words, hearing colors, seeing smells, or feeling sounds, a person with synesthesia might experience colored words or numbers, tastes without eating anything, or smells with no apparent cause. Synesthesia is not uncommon in the general population; about 1 in 25 people have it.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                        <p>Other forms of synesthesia include things such as tasting words, hearing colors, seeing smells, or feeling sounds, a person with synesthesia might experience colored words or numbers, tastes without eating anything, or smells with no apparent cause. Synesthesia is not uncommon in the general population; about 1 in 25 people have it.</p>
                     </div>
                 </div>
                 <!-- /.row-->
@@ -307,7 +307,7 @@ Many autistic people also have difficulty with reading emotions and recognizing 
                     <p><a href="tandc.html">Terms &amp; Conditions</a>&nbsp;-&nbsp;<a href="pp.html">Privacy Policy</a></p>
                     <p>
     We don't use any cookies except essential ones, and don't monitor traffic.</p>
-                    <p>Copyright © Paint Punkz NFT <script> document.write(new Date().getFullYear());</script></p> 
+                    <p>Copyright © Pixel Peepz <script> document.write(new Date().getFullYear());</script></p> 
                 </div>
             </div>
             <!-- /.container -->
@@ -321,5 +321,6 @@ Many autistic people also have difficulty with reading emotions and recognizing 
         <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
         <script type="text/javascript" src="js/bskit-scripts.js"></script>
         <script type="text/javascript" src="js/bskit-scripts.js"></script>
+        <script type="text/javascript" src="js/scroll.js"></script>         
     </body>     
 </html>
