--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en" style="height:100%;">
     <head> 
         <meta charset="utf-8"> 
@@ -82,10 +82,6 @@
                         </a>                         
                         <div class="carousel-caption"> 
                             <div class="text-center">
-                                <div class="editContent bg-transwhite">
-                                    <h1>PaintPunkzNFT</h1>
-                                    <h3>An Imagination Collective</h3>
-                                </div>
                                 <div class="text-center">
                                     <div class="col-md-6">
                                         <a href="#pixelpeepz" target="" class="btn btn-block btn-default">Galleries</a>
@@ -106,10 +102,6 @@
                         </a>                         
                         <div class="carousel-caption"> 
                             <div class="text-center">
-                                <div class="editContent bg-transwhite">
-                                    <h1>PaintPunkzNFT</h1>
-                                    <h3>An Imagination Collective</h3>
-                                </div>
                                 <div class="text-center">
                                     <div class="col-md-6">
                                         <a href="#pixelpeepz" target="" class="btn btn-block btn-default">Galleries</a>
@@ -130,10 +122,6 @@
                         </a>                         
                         <div class="carousel-caption"> 
                             <div class="text-center">
-                                <div class="editContent bg-transwhite">
-                                    <h1>PaintPunkzNFT</h1>
-                                    <h3>An Imagination Collective</h3>
-                                </div>
                                 <div class="text-center">
                                     <div class="col-md-6">
                                         <a href="#pixelpeepz" target="" class="btn btn-block btn-default">Galleries</a>
@@ -144,8 +132,7 @@
                                 </div>
                             </div>
                             <div class="container">
-</div>
-                            <a name="anchor" href="https://opensea.io/PaintPunkz" class="bg-transwhite"><h3>The Home of the Pixel Peepz</h3><p class="white">Available now on Open Sea</p></a> 
+</div>                             
                         </div>                         
                     </div>                     
                 </div>                 
@@ -154,6 +141,10 @@
                 <a class="right carousel-control" href="#carousel1" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a> 
             </div>
         </header>
+        <div class="editContent text-center white bg-black pad10 pad-bottom10">
+            <h1>PaintPunkzNFT</h1>
+            <h3>An Imagination Collective</h3>
+        </div>
         <section id="content-3-7" class="content-block content-3-7">
             <div class="container">
                 <div class="col-sm-12">
@@ -844,7 +835,7 @@
                     <p><a href="tandc.html">Terms &amp; Conditions</a>&nbsp;-&nbsp;<a href="pp.html">Privacy Policy</a></p>
                     <p>
     We don't use any cookies except essential ones, and don't monitor traffic.</p>
-                    <p>Copyright © Paint Punkz NFT <script> document.write(new Date().getFullYear());</script></p> 
+                    <p>Copyright © Pixel Peepz <script> document.write(new Date().getFullYear());</script></p> 
                 </div>
             </div>
             <!-- /.container -->
@@ -857,6 +848,7 @@
         <script type="text/javascript" src="js/plugins.js"></script>
         <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
         <script type="text/javascript" src="js/bskit-scripts.js"></script>         
-        <script type="text/javascript" src="js/bskit-scripts.js"></script>         
+        <script type="text/javascript" src="js/bskit-scripts.js"></script>
+        <script type="text/javascript" src="js/scroll.js"></script>
     </body>     
 </html>
