--- a/blackmagic.html
+++ b/blackmagic.html
@@ -43,7 +43,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <h2><a href="index.html">Home</a></h2>
+                        <h2><a href="index.html" class="black">Home</a></h2>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="navbar-collapse">
