--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
                                         <a href="https://twitter.com/PaintPunkzNFT"><i class="fa fa-2x fa-twitter"></i></a>
                                     </li>
                                     <li>
-                                        <a href="https://twitter.com/PaintPunkzNFT"><i class="fa fa-2x fa-facebook-square bg-river-hover"></i></a>
+                                        <a href="https://www.facebook.com/Paintpunkznft/"><i class="fa fa-2x fa-facebook-square bg-river-hover"></i></a>
                                     </li>
                                     <li>
-                                        <a href="https://twitter.com/PaintPunkzNFT"><i class="fa fa-2x fa-instagram bg-black-hover"></i></a>
+                                        <a href="https://www.instagram.com/paintpunkznft/"><i class="fa fa-2x fa-instagram bg-black-hover"></i></a>
                                     </li>
                                     <li>
                                         <a href="https://opensea.io/accounts/PaintPunkz"><i class="fa fa-2x fa-photo bg-silver-hover"></i></a>
