--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,9 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <h2><a href="index.html" class="black">Home</a></h2>
+                        <h2><a href="index.html" class="black">
+                                <img src="images/PPLogo.png" width="80px"/>
+                            </a></h2>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -113,10 +115,10 @@
         <section class="content-block-nopad footer-wrap-1-3 bg-transparent">
             <div class="container footer-1-3">
                 <div class="col-xs-12 footer-text">
-                    <p><a href="tandc.html">Terms &amp; Conditions</a>&nbsp;-&nbsp;<a href="pp.html">Privacy Policy</a></p>
+                    <p><a href="tandc.html" class="black">Terms &amp; Conditions</a>&nbsp;-&nbsp;<a href="pp.html" class="black">Privacy Policy</a></p>
                     <p>
     We don't use any cookies except essential ones, and don't monitor traffic.</p>
-                    <p>Copyright © Pixel Peepz <script> document.write(new Date().getFullYear());</script></p> 
+                    <p>Copyright © Paint Punkz NFT <script> document.write(new Date().getFullYear());</script></p> 
                 </div>
             </div>
             <!-- /.container -->
