--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <h2><a href="index.html" class="black">Home</a></h2>
+                        <h2><a href="index.html" class="black">
+                                <img src="images/PPLogo.png" width="80px"/>
+                            </a></h2>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -141,9 +143,8 @@
                 <a class="right carousel-control" href="#carousel1" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a> 
             </div>
         </header>
-        <div class="editContent text-center white bg-black pad10 pad-bottom10">
-            <h1>PaintPunkzNFT</h1>
-            <h3>An Imagination Collective</h3>
+        <div class="editContent text-center white bg-black pad10 pad-bottom20">
+            <img src="images/PPLogoCROPPED.png" width="100%"/>
         </div>
         <section id="content-3-7" class="content-block content-3-7">
             <div class="container">
@@ -212,7 +213,7 @@
                                         <a href="https://www.facebook.com/Paintpunkznft/"><i class="fa fa-2x fa-facebook-square bg-river-hover"></i></a>
                                     </li>
                                     <li>
-                                        <a href="https://www.instagram.com/paintpunkznft/"><i class="fa fa-2x fa-instagram bg-black-hover"></i></a>
+                                        <a href="https://discord.com/channels/617394767495561247/846835795880050698/854120107595661312"><i class="fa fa-2x fa-instagram bg-black-hover"></i></a>
                                     </li>
                                     <li>
                                         <a href="https://opensea.io/accounts/PaintPunkz"><i class="fa fa-2x fa-photo bg-silver-hover"></i></a>
@@ -236,7 +237,7 @@
                             <div class="team-details">
                                 <h4 class="member-name">Black Magic NFTs</h4>
                                 <p class="position">Co-Founder</p>
-                                <p>Tech guy, occasional artist, I maintain the website and do art in my spare time, as well as listing a lot of the NFT's we have available.</p>
+                                <p class="pad-bottom45">Tech guy, occasional artist, I maintain the website and do art in my spare time, as well as listing a lot of the NFT's we have available.</p>
                                 <ul class="social social-dark text-center">
                                     <li>
                                         <a href="https://twitter.com/BlackMagicNFTs"><i class="fa fa-2x fa-twitter"></i></a>
@@ -748,6 +749,28 @@
             </div>
             <!-- /.container -->
         </section>
+        <div class="container">
+            <div class="row text-center margin-bottom20">
+                <h2>RPG Battlemaps</h2>
+                <h3>Made for Mandem Games</h3>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="images/Small_DockyardScene1.png" width="100%"/>                      
+                </div>
+                <div class="col-md-4">
+                    <img src="images/Small_River1_Moonlight.png" width="100%"/>                      
+                </div>
+                <div class="col-md-4">
+                    <img src="images/Small_Ship1.png" width="100%"/>                      
+                </div>
+            </div>
+            <div class="row text-center pad20">
+                <a name="anchor" href="https://www.drivethrurpg.com/browse/pub/19167/Mandem-Games">
+                    <button type="button" class="btn btn-default">Buy now on Drive Thru RPG</button>
+                </a>
+            </div>
+        </div>
         <section class="content-block gallery-1 gallery-1-2">
             <div class="container">
                 <div class="underlined-title" id="blackmagic">
@@ -798,11 +821,11 @@
                             </div>
                             <div class="col-md-4 col-sm-12 col-xs-12 pad25">
                                 <div class="col-xs-2">
-                                    <span class="fa fa-file-o"></span>
+                                    <span class="fa fa-dollar"></span>
                                 </div>
                                 <div class="col-xs-10">
-                                    <h4>Why Battlemaps?</h4>
-                                    <p>Because I have a phyical addiction to DnD, I start to sweat if I don't get on DnDBeyond at least once a day.</p>
+                                    <h4>What is Value?</h4>
+                                    <p>That's a great question, let's find out.</p>
                                 </div>
                             </div>
                             <div class="col-md-4 col-sm-12 col-xs-12 pad25">
@@ -832,10 +855,10 @@
         <section class="content-block-nopad footer-wrap-1-3 bg-transparent">
             <div class="container footer-1-3">
                 <div class="col-xs-12 footer-text">
-                    <p><a href="tandc.html">Terms &amp; Conditions</a>&nbsp;-&nbsp;<a href="pp.html">Privacy Policy</a></p>
+                    <p><a href="tandc.html" class="black">Terms &amp; Conditions</a>&nbsp;-&nbsp;<a href="pp.html" class="black">Privacy Policy</a></p>
                     <p>
     We don't use any cookies except essential ones, and don't monitor traffic.</p>
-                    <p>Copyright © Pixel Peepz <script> document.write(new Date().getFullYear());</script></p> 
+                    <p>Copyright © Paint Punkz NFT <script> document.write(new Date().getFullYear());</script></p> 
                 </div>
             </div>
             <!-- /.container -->
