--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                         <a href="https://www.facebook.com/Paintpunkznft/"><i class="fa fa-2x fa-facebook-square bg-river-hover"></i></a>
                                     </li>
                                     <li>
-                                        <a href="https://discord.com/channels/617394767495561247/846835795880050698/854120107595661312"><i class="fa fa-2x fa-instagram bg-black-hover"></i></a>
+                                        <a href="https://www.instagram.com/paintpunkznft/"><i class="fa fa-2x fa-instagram bg-black-hover"></i></a>
                                     </li>
                                     <li>
                                         <a href="https://opensea.io/accounts/PaintPunkz"><i class="fa fa-2x fa-photo bg-silver-hover"></i></a>
@@ -237,7 +237,7 @@
                             <div class="team-details">
                                 <h4 class="member-name">Black Magic NFTs</h4>
                                 <p class="position">Co-Founder</p>
-                                <p class="pad-bottom45">Tech guy, occasional artist, I maintain the website and do art in my spare time, as well as listing a lot of the NFT's we have available.</p>
+                                <p>I work as a designer and developer for the company and my job is to make sure that everything on our digital storefront looks as good as it can. I handle everything from the design, to graphics, and even animations. On top of that, I have a side project where I create art every once in a while.</p>
                                 <ul class="social social-dark text-center">
                                     <li>
                                         <a href="https://twitter.com/BlackMagicNFTs"><i class="fa fa-2x fa-twitter"></i></a>
