--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                             <div class="team-details">
                                 <h4 class="member-name">Black Magic NFTs</h4>
                                 <p class="position">Co-Founder</p>
-                                <p>I work as a designer and developer for the company and my job is to make sure that everything on our digital storefront looks as good as it can. I handle everything from the design, to graphics, and even animations. On top of that, I have a side project where I create art every once in a while.</p>
+                                <p>I work as a designer and developer for the collective and my job is to make sure that everything on our digital storefront looks as good as it can. I handle everything from the design, to graphics, and even animations. On top of that, I have a side project where I create art every once in a while.</p>
                                 <ul class="social social-dark text-center">
                                     <li>
                                         <a href="https://twitter.com/BlackMagicNFTs"><i class="fa fa-2x fa-twitter"></i></a>
