--- a/contact.html
+++ b/contact.html
@@ -75,37 +75,8 @@
                         <hr>
                         <h2 wp-cz-control="blocks_contact_1_subtitle" wp-cz-control-label="Subtitle" wp-cz-control-section="blocks_contact_1" wp-cz-theme-mod="blocks_contact_1_subtitle">Feel free to contact us</h2>
                     </div>
-                    <p wp-cz-control="blocks_contact_1_text" wp-cz-control-label="Text" wp-cz-control-section="blocks_contact_1" wp-cz-theme-mod="blocks_contact_1_text" wp-cz-control-type="textarea">We love to hear from you! We'll do our best to get back in touch within a week!</p>
-                    <div id="contact" class="form-container" wp-register-sidebar="Contact 1 Form" wp-register-sidebar-id="blocks_contact_1_form" wp-register-sidebar-before="<div>" wp-register-sidebar-after="</div>" wp-dynamic-sidebar="blocks_contact_1_form">
-                        <div id="message"></div>
-                        <form method="post" action="js/contact-form.php" name="contactform" id="contactform">
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <div class="form-group">
-                                        <input name="name" id="name" type="text" value="" placeholder="Name" class="form-control"/>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class="form-group">
-                                        <input name="email" id="email" type="text" value="" placeholder="Email" class="form-control"/>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class="form-group">
-                                        <input name="phone" id="phone" type="text" value="" placeholder="Phone (with Area Code)" class="form-control"/>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- /.row -->
-                            <div class="form-group">
-                                <textarea name="comments" id="comments" class="form-control" rows="3" placeholder="Message" id="textArea"></textarea>
-                                <p class="small text-muted"><span class="guardsman">* All fields are required.</span> Once we receive your message we will respond as soon as possible.</p>
-                            </div>
-                            <div class="form-group">
-                                <button class="btn btn-primary" type="submit" id="cf-submit" name="submit">Send</button>
-                            </div>
-                        </form>
-                    </div>
+                    <p wp-cz-control="blocks_contact_1_text" wp-cz-control-label="Text" wp-cz-control-section="blocks_contact_1" wp-cz-theme-mod="blocks_contact_1_text" wp-cz-control-type="textarea">We love to hear from you! We'll do our best to get back in touch within a week! We promise to never spam you or sell your contact information.</p>
+                    <p wp-cz-control="blocks_contact_1_text" wp-cz-control-label="Text" wp-cz-control-section="blocks_contact_1" wp-cz-theme-mod="blocks_contact_1_text" wp-cz-control-type="textarea">Please email us at paintpunkznft @ protonmail.com, just remove all the spaces and you're good to go!</p>
                     <!-- /.form-container -->
                 </div>
                 <!-- /.col-sm-10 -->
