--- a/creatorpunk.html
+++ b/creatorpunk.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8"> 
         <title>Creator Punk - Paint Punkz NFT</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <meta name="keywords" content="pinegrow, blocks, bootstrap"/>
-        <meta name="description" content="My new website"/>
+        <meta name="keywords" content="NFT, NFTs, Digital Art, NFT Community, NFT Collector, NFT Drop, NFT Buy, NFT Sell, what NFT, what is NFT, NFT Collector, NFT Collectibles, NFT Art, Crypto Art, Crypto, OpenSea NFT, AI, AI Art, Artificial Intelligence, Deep Learning, Machine Learning, Neural Networks, Experimental Art, GAN, Landscape, AIArt, Machine Learning, Art, Painting, Contemporary Art, Art Technology"/>
+        <meta name="description" content="Paint Punkz NFT - An Imagination Collective. Selling, buying and exploring the NFT market."/>
         <link rel="shortcut icon" href="ico/favicon.png"> 
         <!-- Core CSS -->         
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"> 
