--- a/tandc.html
+++ b/tandc.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
+        <meta name="keywords" content="NFT, NFTs, Digital Art, NFT Community, NFT Collector, NFT Drop, NFT Buy, NFT Sell, what NFT, what is NFT, NFT Collector, NFT Collectibles, NFT Art, Crypto Art, Crypto, OpenSea NFT, AI, AI Art, Artificial Intelligence, Deep Learning, Machine Learning, Neural Networks, Experimental Art, GAN, Landscape, AIArt, Machine Learning, Art, Painting, Contemporary Art, Art Technology"/>
+        <meta name="description" content="Paint Punkz NFT - An Imagination Collective. Selling, buying and exploring the NFT market."/>
         <meta name="author" content="">
         <title>Termms and Conditions - Paint Punkz NFT</title>
         <!-- Bootstrap core CSS -->
