--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <h2><a href="index.html" class="black">
-                                <img src="images/PPLogo.png" width="80px"/>
+                                <img width="80px" src="images/PPLogo.jpg"/>
                             </a></h2>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
