--- a/creatorpunk.html
+++ b/creatorpunk.html
@@ -36,7 +36,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <h2><a href="index.html" class="black">
-                                <img src="images/PPLogo.png" width="80px"/>
+                                <img width="80px" src="images/PPLogo.jpg"/>
                             </a></h2>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -124,7 +124,7 @@ Many autistic people also have difficulty with reading emotions and recognizing 
             <div class="project-wrapper">
                 <div class="col-md-3 col-sm-6 project">
                     <div class="background-image-holder">
-                        <img class="background-image" alt="Background Image" src="images/chalkpro.png">
+                        <img class="background-image" alt="Background Image" src="images/chalkpro.jpeg">
                     </div>
                     <div class="hover-state">
                         <div class="align-vertical">
@@ -135,7 +135,7 @@ Many autistic people also have difficulty with reading emotions and recognizing 
                 </div>
                 <div class="col-md-3 col-sm-6 project">
                     <div class="background-image-holder">
-                        <img class="background-image" alt="Background Image" src="images/vanpro.png">
+                        <img class="background-image" alt="Background Image" src="images/vanpro.jpeg">
                     </div>
                     <div class="hover-state">
                         <div class="align-vertical">
@@ -146,7 +146,7 @@ Many autistic people also have difficulty with reading emotions and recognizing 
                 </div>
                 <div class="col-md-3 col-sm-6 project">
                     <div class="background-image-holder">
-                        <img class="background-image" alt="Background Image" src="images/arcimpro.png">
+                        <img class="background-image" alt="Background Image" src="images/arcimpro.jpeg">
                     </div>
                     <div class="hover-state">
                         <div class="align-vertical">
@@ -157,7 +157,7 @@ Many autistic people also have difficulty with reading emotions and recognizing 
                 </div>
                 <div class="col-md-3 col-sm-6 project">
                     <div class="background-image-holder">
-                        <img class="background-image" alt="Background Image" src="images/acidpro.png">
+                        <img class="background-image" alt="Background Image" src="images/acidpro.jpeg">
                     </div>
                     <div class="hover-state">
                         <div class="align-vertical">
