--- a/blackmagic.html
+++ b/blackmagic.html
@@ -24,11 +24,11 @@
     <![endif]-->         
     </head>     
     <body data-spy="scroll" data-target="nav">
-        <div class="container pad60">
+        <div class="container pad45">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <h1 class="text-center">Black Magic NFTs</h1>
-                    <img src="images/bmlogo.png" width="100%"/> 
+                    <img width="100%" src="images/bmlogo.jpeg"/> 
                 </div>
             </div>
         </div>
@@ -44,7 +44,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <h2><a href="index.html" class="black">
-                                <img src="images/PPLogo.png" width="80px"/>
+                                <img src="images/PPLogo.jpg" width="80px"/>
                             </a></h2>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
