--- a/contact.html
+++ b/contact.html
@@ -77,6 +77,7 @@
                     </div>
                     <p wp-cz-control="blocks_contact_1_text" wp-cz-control-label="Text" wp-cz-control-section="blocks_contact_1" wp-cz-theme-mod="blocks_contact_1_text" wp-cz-control-type="textarea">We love to hear from you! We'll do our best to get back in touch within a week! We promise to never spam you or sell your contact information.</p>
                     <p wp-cz-control="blocks_contact_1_text" wp-cz-control-label="Text" wp-cz-control-section="blocks_contact_1" wp-cz-theme-mod="blocks_contact_1_text" wp-cz-control-type="textarea">Please email us at paintpunkznft @ protonmail.com, just remove all the spaces and you're good to go!</p>
+                    <p wp-cz-control="blocks_contact_1_text" wp-cz-control-label="Text" wp-cz-control-section="blocks_contact_1" wp-cz-theme-mod="blocks_contact_1_text" wp-cz-control-type="textarea"><a href="https://discord.gg/4F8rx36V" class="black">Or you can chat to us on Discord at the Paint Punkz NFT Server! Just click anywhere on this paragraph.</a></p>
                     <!-- /.form-container -->
                 </div>
                 <!-- /.col-sm-10 -->
