--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <!-- Wrapper for slides -->                 
                 <div class="carousel-inner"> 
                     <div class="item active"> 
-                        <a name="anchor" href="https://opensea.io/collection/fantasy-females">
+                        <a name="anchor" href="https://opensea.io/collection/ai-fantasy-women">
                             <img src="images/fp.jpg" alt=""/>
                         </a>                         
                         <div class="carousel-caption"> 
@@ -95,7 +95,7 @@
                             </div>
                             <div class="container">
 </div>
-                            <a name="anchor" href="https://opensea.io/collection/fantasy-females" class="bg-transwhite"><h3>Fantasy Women</h3><p class="white">Available now on Open Sea.</p></a> 
+                            <a name="anchor" href="https://opensea.io/collection/ai-fantasy-women" class="bg-transwhite bg-black"><h3>Fantasy Women</h3><p class="white">Available now on Open Sea.</p></a> 
                         </div>                         
                     </div>                     
                     <div class="item"> 
@@ -654,7 +654,7 @@
                                     <img src="images/zentreegal.jpg" class="img-responsive" alt="1st gallery Thumb">
                                     <div class="image-overlay"></div>
                                     <a href="images/zentree.jpg" class="gallery-zoom"><i class="fa fa-eye" alt="This is the title"></i></a>
-                                    <a href="https://opensea.io/collection/zen-tree" class="gallery-link" target="_blank"><i class="fa fa-link"></i></a>
+                                    <a href="https://opensea.io/assets/zen-tree" class="gallery-link" target="_blank"><i class="fa fa-link"></i></a>
                                 </div>
                                 <div class="gallery-details">
                                     <h5>Zen Tree</h5>
@@ -704,10 +704,10 @@
                                     <img src="images/fpgal.jpg" class="img-responsive" alt="1st gallery Thumb">
                                     <div class="image-overlay"></div>
                                     <a href="images/fp.jpg" class="gallery-zoom"><i class="fa fa-eye" alt="This is the title"></i></a>
-                                    <a href="https://opensea.io/collection/fantasy-females" class="gallery-link" target="_blank"><i class="fa fa-link"></i></a>
+                                    <a href="https://opensea.io/collection/ai-fantasy-women" class="gallery-link" target="_blank"><i class="fa fa-link"></i></a>
                                 </div>
                                 <div class="gallery-details">
-                                    <h5>Fantasy Females</h5>
+                                    <h5>Fantasy Women</h5>
                                 </div>
                             </div>
                         </div>
