--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                                     <img src="images/chaoswastesgal.jpg" class="img-responsive" alt="2nd gallery Thumb">
                                     <div class="image-overlay"></div>
                                     <a class="gallery-zoom" href="images/chaoswastes.jpg"><i class="fa fa-eye"></i></a>
-                                    <a href="https://opensea.io/collection/ai-fantasy-landscapes" class="gallery-link"><i class="fa fa-link"></i></a>
+                                    <a href="https://opensea.io/collection/ai-fantasy-landscapes" class="gallery-link" target="_blank"><i class="fa fa-link"></i></a>
                                 </div>
                                 <div class="gallery-details">
                                     <h5>Fantasy Landscapes</h5>
@@ -682,7 +682,7 @@
                                     <img src="images/csgal.jpg" class="img-responsive" alt="3rd gallery Thumb">
                                     <div class="image-overlay"></div>
                                     <a href="images/cs.jpeg" class="gallery-zoom"><i class="fa fa-eye"></i></a>
-                                    <a href="https://opensea.io/collection/ai-cityscapes" class="gallery-link"><i class="fa fa-link"></i></a>
+                                    <a href="https://opensea.io/collection/ai-cityscapes" class="gallery-link" target="_blank"><i class="fa fa-link"></i></a>
                                 </div>
                                 <div class="gallery-details">
                                     <h5>Cityscapes</h5>
@@ -718,7 +718,7 @@
                                     <img src="images/pagal.jpg" class="img-responsive" alt="2nd gallery Thumb">
                                     <div class="image-overlay"></div>
                                     <a class="gallery-zoom" href="images/pa.jpeg"><i class="fa fa-eye"></i></a>
-                                    <a href="https://opensea.io/collection/artificial-abstracts" class="gallery-link"><i class="fa fa-link"></i></a>
+                                    <a href="https://opensea.io/collection/artificial-abstracts" class="gallery-link" target="_blank"><i class="fa fa-link"></i></a>
                                 </div>
                                 <div class="gallery-details">
                                     <h5>Abstract</h5>
@@ -732,7 +732,7 @@
                                     <img src="images/vid1gal.jpeg" class="img-responsive" alt="2nd gallery Thumb">
                                     <div class="image-overlay"></div>
                                     <a href="images/vid1gal.GIF" class="gallery-zoom"><i class="fa fa-eye"></i></a>
-                                    <a href="https://opensea.io/collection/fantasy-females-videos" class="gallery-link"><i class="fa fa-link"></i></a>
+                                    <a href="https://opensea.io/collection/fantasy-females-videos" class="gallery-link" target="_blank"><i class="fa fa-link"></i></a>
                                 </div>
                                 <div class="gallery-details">
                                     <h5>Videos &amp; GIFs</h5>
