--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <meta name="keywords" content="NFT, NFTs, Digital Art, NFT Community, NFT Collector, NFT Drop, NFT Buy, NFT Sell, what NFT, what is NFT, NFT Collector, NFT Collectibles, NFT Art, Crypto Art, Crypto, OpenSea NFT, AI, AI Art, Artificial Intelligence, Deep Learning, Machine Learning, Neural Networks, Experimental Art, GAN, Landscape, AIArt, Machine Learning, Art, Painting, Contemporary Art, Art Technology"/>
         <meta name="description" content="Paint Punkz NFT - An Imagination Collective. Selling, buying and exploring the NFT market."/>
+        <meta property="og:image" content="images/pplogo.jpeg"/>
+        <meta property="og:url" content="http://paintpunkznft.com"/>
+        <meta property="og:title" content="Paint Punkz NFT: An Imagination Collective"/>
         <link rel="shortcut icon" href="ico/favicon.png"> 
         <!-- Core CSS -->         
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"> 
@@ -626,7 +629,7 @@
                                     <a href="https://opensea.io/collection/pixel-peepz-chalk" class="gallery-link"><i class="fa fa-link"></i></a>
                                 </div>
                                 <div class="gallery-details">
-                                    <h5>Chalky</h5>
+                                    <h5>Chalk</h5>
                                 </div>
                             </div>
                         </div>
