--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
         </header>
         <div class="editContent text-center white bg-black pad10 pad-bottom20">
-            <img src="images/PPLogoCROPPED.jpeg" width="100%"/>
+            <img src="images/PPLogo.jpg" width="100%"/>
         </div>
         <section id="content-3-7" class="content-block content-3-7">
             <div class="container">
